hphp/hack/test/typecheck/expression_trees/dynamic_property_access.php.exp
ERROR: File "dynamic_property_access.php", line 12, characters 5-10:
Expression trees only support named property or instance method access. (Parsing[1002])
ERROR: File "dynamic_property_access.php", line 12, characters 9-10:
Dynamic access of properties and methods is only permitted on values of type `dynamic`. (Naming[2011])
  File "dynamic_property_access.php", line 12, characters 9-10:
  Did you mean `->z` instead?
ERROR: File "dynamic_property_access.php", line 12, characters 9-10:
Variable `$z` is undefined, or not always defined. (Naming[2050])
  File "dynamic_property_access.php", line 9, characters 41-51:
  Did you mean `$splice_var` instead?
ERROR: File "dynamic_property_access.php", line 12, characters 5-10:
Dynamic access of property (Typing[4110])
  File "dynamic_property_access.php", line 12, characters 5-10:
  Expected `dynamic`
  File "dynamic_property_access.php", line 10, characters 15-21:
  Type `MyClass` is not a subtype of `dynamic` under dynamic-aware subtyping
